Add SEO and Open Graph meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,21 @@
           rel="stylesheet"
   />
 
-  <title>praestholm</title>
+  <title>Oskar Præstholm | Software Engineer</title>
+  <meta name="description" content="Portfolio of Oskar Præstholm — full-stack software engineer with a masters in software engineering." />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://praestholm.dk/" />
+  <meta property="og:title" content="Oskar Præstholm | Software Engineer" />
+  <meta property="og:description" content="Portfolio of Oskar Præstholm — full-stack software engineer with a masters in software engineering." />
+  <meta property="og:image" content="https://praestholm.dk/praestholm.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Oskar Præstholm | Software Engineer" />
+  <meta name="twitter:description" content="Portfolio of Oskar Præstholm — full-stack software engineer with a masters in software engineering." />
+  <meta name="twitter:image" content="https://praestholm.dk/praestholm.png" />
 </head>
 <body>
 <div id="root"></div>
